--- a/src/main/resources/templates/errorpage/error.html
+++ b/src/main/resources/templates/errorpage/error.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>hello world</title>
+    <title>错误页面</title>
 </head>
 <body>
-Hello World!
+<h1>出错了</h1>
 </body>
 </html>
