--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>登录成功</title>
+    <title>欢迎</title>
 </head>
 <body>
-登录成功1231
-
+<a href="login.action">登录</a>
+<a href="reg.action">注册</a>
 </body>
 </html>
