--- a/src/main/resources/templates/According.html
+++ b/src/main/resources/templates/According.html
@@ -26,8 +26,8 @@
               <td>{{sname}}</td>
               <td>{{sage}}</td>
               <td>{{gender}}</td>
-              <td><a href="adltStu.action">删除</a></td>
-              <td><a href="updatestu.action">修改</a></td>
+              <td><a href="deltStu.action&id={{sid}}">删除</a></td>
+              <td><a href="updatestu.action&id={{sid}}">修改</a></td>
           </tr>
           {{/each}}
       </script>
