--- a/src/main/resources/templates/According.html
+++ b/src/main/resources/templates/According.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <script src="./js/jquery-2.2.0.js"></script>
     <script src="./js/handlebars-v4.0.11.js"></script>
-    <script src="./js/product.js"></script>
     <title>学生列表</title>
 </head>
 <body>
@@ -26,15 +25,15 @@
               <td>{{sname}}</td>
               <td>{{sage}}</td>
               <td>{{gender}}</td>
-              <td><a href="deltStu.action&id={{sid}}">删除</a></td>
-              <td><a href="updatestu.action&id={{sid}}">修改</a></td>
+              <td><a href="javascript:delstu(id={{sid}});">删除</a></td>
+              <td><a href="javascript:updatastu(id={{sid}});">修改</a></td>
           </tr>
           {{/each}}
       </script>
 <script>
 
     $.ajax({
-        type: 'get',
+        type: 'POST',
         url: 'funStuAll.action',
         dataType:"JSON",
         success: function (data) {
@@ -48,6 +47,31 @@
             document.getElementById("product-table-tepl").innerHTML = html;
         }
     });
+
+    function  delstu(id){
+        $.ajax({
+            type:"POST",
+            url:"deltStu.action?id="+id,
+            success:function (data){
+                if(data.code=1){
+                    alert("删除成功");
+                    window.location.href = "loginUser.action";
+
+                }else{
+                    alert("删除失败");
+                }
+            }
+        });
+
+    }
+
+    function  updatastu(id){
+        $.ajax({
+            type:"POST",
+            url:"updatestu.action?id"+id,
+        });
+
+    }
 </script>
 
 </body>
