--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-sm-6 col-sm-offset-3 form-box">
                     <div class="form-bottom">
-                        <form role="form" action="login.action" method="post" class="login-form">
+                        <form role="form" action="loginUser.action" method="post" class="login-form">
                             <div class="form-group">
                                 <label class="sr-only" for="form-name">账号</label>
                                 <input type="text" name="name" placeholder="Username..." class="form-username form-control" id="form-name">
