--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--suppress JSAnnotator -->
 <html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
@@ -12,7 +11,7 @@
 <form  action="user_reg.action" method="post" >
        用户名:<input type="text" name="name" id="reg_input_name"/><br/>
        密码:<input type="password" name="password" id="reg_input_pwd"/><br/>
-      手机号码:<input type="text" name="mobile_phone" id="reg_input_phone" /><br/>
+      手机号码:<input type="text" name="phone" id="reg_input_phone" /><br/>
     年龄:<input type="text" name="age" id="reg_input_age" /><br/>
     性别:<input type="text" name="sex" id="reg_input_sex" /><br/>
     电子邮件:<input type="text" name="email" id="reg_input_email" /><br/>
@@ -27,7 +26,7 @@
         var users={
             name : $("#reg_input_name").val(),
             password : $("#reg_input_pwd").val(),
-            mobile_phone : $("#reg_input_phone").val(),
+            phone : $("#reg_input_phone").val(),
             age : $("#reg_input_age").val(),
             sex : $("#reg_input_sex").val(),
             email : $("#reg_input_email").val(),
