--- a/src/main/resources/templates/According.html
+++ b/src/main/resources/templates/According.html
@@ -68,7 +68,7 @@
     function  updatastu(id){
         $.ajax({
             type:"POST",
-            url:"updatestu.action?id"+id,
+            url:"funselectA.action?id="+id,
         });
 
     }
